@@ -325,7 +325,6 @@ void activate(GApplication* application)
 void open(GApplication* application,GFile** files,gint n_files,const gchar* hint)
 {
 	char*	filepath=NULL;
-	pageStruct*	page;
 
 	g_application_hold(application);
 
@@ -342,10 +341,6 @@ void open(GApplication* application,GFile** files,gint n_files,const gchar* hint
 	if(mainWindow!=NULL)
 		gtk_window_present((GtkWindow*)mainWindow);
 
-//	page=getDocumentData(-1);
-//	if(page!=NULL)
-//		switchPage(mainNotebook,page->tabVbox,currentTabNumber,NULL);
-//	setSensitive();
 	setWidgets();
 	g_application_release(application);
 }
